<resources>
    <string name="app_name">dz 3</string>

    <string name="play">play</string>

    <string name="first_student">first student</string>
    <string name="second_student">second student</string>
    <string name="third_student">third student</string>
    <string name="amir">Amir</string>
    <string name="asem">Asem</string>
    <string name="adi">Adi</string>
    <string name="who_is_who">who is who?</string>

</resources>