<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tv_who_is_who"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/who_is_who"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />




    <ImageView
        android:id="@+id/im_student"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_launcher_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_who_is_who" />


    <LinearLayout
        android:id="@+id/image_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im_student">

        <Button
            android:id="@+id/btn_student1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/oval"
            android:backgroundTint="@color/purple_200"
            android:onClick="changeImage"
            android:text="@string/first_student"
            android:textStyle="italic"

            />

        <Button
            android:id="@+id/btn_student2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/oval"
            android:backgroundTint="@color/purple_200"
            android:onClick="changeImage"
            android:text="@string/second_student"
            android:textSize="10dp"
            android:textStyle="italic"
            />



        <Button
            android:id="@+id/btn_student3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/oval"
            android:backgroundTint="@color/purple_200"
            android:onClick="changeImage"
            android:text="@string/third_student"
            android:textStyle="italic"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_selection">

        <Button
            android:id="@+id/btn_amir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/oval"
            android:backgroundTint="@color/purple_200"
            android:inputType="text"
            android:text="@string/amir"
            android:textStyle="italic"

            />

        <Button
            android:id="@+id/btn_asem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/oval"
            android:backgroundTint="@color/purple_200"
            android:inputType="text"
            android:text="@string/asem"
            android:textStyle="italic"
            />



        <Button
            android:id="@+id/btn_adi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/oval"
            android:backgroundTint="@color/purple_200"
            android:inputType="text"
            android:text="@string/adi"
            android:textStyle="italic"
            />


    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>